crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__retrieval_with_scores__pretty_color.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
Found 2 memories (out of 7 total):

  <green>[0.85]</green> <cyan>550e8400-e29b</cyan> <yellow>Decision</yellow>  Test summary
  <green>[0.42]</green> <cyan>018f2a1b-3c4d</cyan> <yellow>Hazard</yellow> [observation] [invalidated 2020-06-15]  Blocking calls deadlock the daemon
--- stderr ---
